<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Add Income</string>
    <string name="amount" />
    <string name="date" />
    <string name="note" />
    <string name="income_add_button">Add</string>
    <string name="income_button">Income</string>
    <string name="expenses_button">Expenses</string>
    <string name="view">View Income</string>
</resources>